--- a/exercicios/pt03/fundo005.html
+++ b/exercicios/pt03/fundo005.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /*shorthand - Background
+                color - image - position - repeat - [size] - attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid blue;
@@ -28,6 +36,13 @@
     <main>
         <h1>Teste de Imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi id modi, cupiditate minima ipsum, corporis pariatur error ea consequuntur molestias illum. Voluptatibus laudantium amet ducimus inventore porro ullam ratione nobis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse praesentium ducimus quae soluta deleniti laudantium temporibus, minima, voluptas eos aliquam nihil. Non ex officia, modi vel quibusdam laudantium ipsam similique.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, hic vero doloribus harum autem veniam expedita id necessitatibus quae maxime voluptatibus amet eveniet suscipit optio officiis, dolorum, sint tenetur voluptatem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse praesentium ducimus quae soluta deleniti laudantium temporibus, minima, voluptas eos aliquam nihil. Non ex officia, modi vel quibusdam laudantium ipsam similique.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, hic vero doloribus harum autem veniam expedita id necessitatibus quae maxime voluptatibus amet eveniet suscipit optio officiis, dolorum, sint tenetur voluptatem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi id modi, cupiditate minima ipsum, corporis pariatur error ea consequuntur molestias illum. Voluptatibus laudantium amet ducimus inventore porro ullam ratione nobis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse praesentium ducimus quae soluta deleniti laudantium temporibus, minima, voluptas eos aliquam nihil. Non ex officia, modi vel quibusdam laudantium ipsam similique.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, hic vero doloribus harum autem veniam expedita id necessitatibus quae maxime voluptatibus amet eveniet suscipit optio officiis, dolorum, sint tenetur voluptatem.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse praesentium ducimus quae soluta deleniti laudantium temporibus, minima, voluptas eos aliquam nihil. Non ex officia, modi vel quibusdam laudantium ipsam similique.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, hic vero doloribus harum autem veniam expedita id necessitatibus quae maxime voluptatibus amet eveniet suscipit optio officiis, dolorum, sint tenetur voluptatem.</p>
     </main>
