--- a/exercicios/pt04/iframe002.html
+++ b/exercicios/pt04/iframe002.html
@@ -20,7 +20,9 @@
     <h1>Teste de iframe</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore at cum repudiandae. Reiciendis tempora vero consequuntur, sapiente incidunt corrupti sequi qui quaerat, nihil nemo id unde quo voluptates, corporis in!</p>
 
-    <iframe src="pag.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag.html" frameborder="0" height="500" width="500">
+        <p>Infelizmento o seu navegador não é compativel com isso.</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A ut non quis voluptates inventore in? Aperiam necessitatibus, amet repudiandae labore expedita, omnis ratione perferendis aut, facilis obcaecati quo ut voluptates.</p>
 </body>
