Finalização projeto - Advogacia

--- a/DevMidia/Advogacia/index.html
+++ b/DevMidia/Advogacia/index.html
@@ -25,7 +25,7 @@
         <img class="imagem-sobre" src="img/img3.jpg" alt="Imagem 3">
         <p><span>Nosso compromisso é com você.</span></p>
     </div>
-    <div class="secao-background-divisao">
+    <div class="secao-divisao">
         <div class="secao-lagura-limitada">
             <h3>Atuação</h3>
         </div>
@@ -53,7 +53,7 @@
         <h3>Fale conosco</h3>
         <ul>
             <li>Telefone: (21) 99999-8888</li>
-            <li>Email: senhorlei@lei.com.br</li>
+            <li>Email: senhoralei@lei.com.br</li>
             <li>Endereço: Avenida Ayrton Senna 3000.</li>
         </ul>
     </div>
