--- a/DevMidia/pousada-secreta/index.html
+++ b/DevMidia/pousada-secreta/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pousada Secreta</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap">
 </head>
 <body>
     <div class="topo"> <!-- LINK DA PAGINA -->
@@ -12,7 +14,7 @@
             <div class="container-link-logo">
                 <a href="index.html">Pousada <span>Secreta</span></a>
             </div>
-            <div class="-container-menu">
+            <div class="-container-links">
                 <a class="link-topo" href="#sobre">SOBRE</a>
                 <a class="link-topo" href="#rota">ROTA</a>
                 <a class="link-topo" href="quartos.html">QUARTOS</a>
@@ -24,7 +26,7 @@
         <div class="banner">
             <div class="container-titulo-site">
                 <h1>Pousada Secreta</h1>
-                <p>A pousada reservada em Sapezal - MAto Grosso</p>
+                <p>A pousada reservada em Sapezal - Mato Grosso</p>
             </div>
         </div>
     </div>
@@ -130,17 +132,17 @@
         </div>
         <div class="card-info-rodape">
             <a target="_blank" href="https://maps.app.goo.gl/nj7hzB2CszgoLfSz8"></a>
-            <img src="/assets/icones/telefone.png" alt="">
+            <img src="assets/icones/endereco.png" alt="">
             <p>Endereço Av. Jau 123, 456 - Sapezal MT</p>
         </div>
         <div class="card-info-rodape">
-            <img src="/assets/icones/telefone.png" alt="Ícone telefone" title="Ícone telefone" />
+            <img src="assets/icones/telefone.png" alt="Ícone telefone" title="Ícone telefone" />
             <p>Cel: (65) 99666-4444</p>
           </div>
           <div class="card-info-rodape">
             <a target="_blank"
               href="https://www.booking.com/searchresults.pt-br.html?aid=375635;label=msn-wLZ0m4wRNI00wFHQAaaO3w-79920787059858%3Atikwd-79920803013016%3Aaud-808219487%3Aloc-20%3Aneo%3Amte%3Adec%3Aqsbooking;sid=9ca5cbe6c9db71b34b98c0738ea780f4;dest_id=-666610;dest_type=city&">
-              <img src="/assets/icones/calendario.png" alt="Ícone calendario" title="Ícone calendario" />
+              <img src="assets/icones/calendario.png" alt="Ícone calendario" title="Ícone calendario" />
               <p>Faça sua reserva pelo Booking.com</p>
             </a>
           </div>
