--- a/DevMidia/Advogacia/index.html
+++ b/DevMidia/Advogacia/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stefany Jordão - Advogacia</title>
+    <title>SJ - Advogacia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     </div>
     <div class="secao-capa">
         <div class="secao-largura-limitada secao-background-conteudo">
-            <h1>Stefany Jordão</h1>
+            <h1>SJ Advogacia</h1>
             <h1>Consultora jurídica pessoal</h1>
         </div>
     </div>
